// $Id$

Transliteration 6.x-3.x, xxxx-xx-xx
-----------------------------------
by smk-ka: New developer-friendly transliteration data file layout.
by smk-ka: Lowered memory footprint of replacement function.
#487550 by viadimezzo: Added sz ligature transliteration to German.


Transliteration 6.x-2.1, 2009-06-09
-----------------------------------
#199660 by smk-ka: Added a constant to disallow converting pre-existing
  filenames by default.
#357254 by overall, Cynicus: Fixed transliteration of Russian letters.
#364931 by PaV: Added Esperanto transliteration.
by smk-ka: Rewrote retroactive transliteration to get rid of SUBSTRING_INDEX
  function dependency.
#312021 by pcorbett: Added SQL Server support.
#257041 by Freso: More transliterations (x21??).


Transliteration 6.x-2.0, 2008-06-12
-----------------------------------
#255646 by smk-ka: Added a language parameter to transliteration_get().
#246875 by smk-ka: Added language-specific replacements for Danish letters.
#253916 by Freso: Fixed typo in .info file.


Transliteration 6.x-1.0, 2008-03-20
-----------------------------------
#199660 by smk-ka: Added retroactive transliteration of existing filenames
  during installation or update. Original idea by colan.


Transliteration 5.x-1.0, 2007-12-09
-----------------------------------
Initial release.
