@@ -5,6 +5,7 @@ Transliteration 6.x-3.x, xxxx-xx-xx
 by smk-ka: New developer-friendly transliteration data file layout.
 by smk-ka: Lowered memory footprint of replacement function.
 #487550 by viadimezzo: Added sz ligature transliteration to German.
+#494234 by yngens: Added Kyrgyz transliteration.
 
 
 Transliteration 6.x-2.1, 2009-06-09
